# indicfortune

./: .gitignore  Makefile  README.md  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
indicfortune/: __init__.py  core.py
indicfortune/templates/: indicfortune.html
libindic/fortune/: core.py  expose.py
libindic/fortune/templates/: fortune.html  indicfortune.html  libindic.fortune.html
libindic/fortune/tests/: test_indicfortune.py
tests/: indicfortune_test.py
