[metadata]
name = libindic-fortune
author = Santhosh Thottingal
author-email = santhosh.thottingal@gmail.com
summary = Returns random quotes
license = LGPL-3.0
description-file =
  README.md
home-page = https://libindic.org/indicfortune
requires-python = >=2.7
classifier =
  Development Status :: 5 - Production/Stable
  License :: DFSG approved
  License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
  Operating System :: OS Independent
  Intended Audience :: Developers
  Intended Audience :: Information Technology
  Programming Language :: Python

[files]
namespace_packages = libindic
packages = libindic
data-files = libindic-fortune/data_files = libindic/fortune/database/*

[entry_points]
libindic.api.rest =
    fortune = libindic.fortune.expose:fortune

[wheel]
universal=1
    
